tests/NormalTests/paczka1/fuzzy1/52231225.err
Error in line 4: ZA39o S937 83,6
Error in line 1: nB5zWVh A645 46,8
Error in line 12: nB5zWVh A374 22,8
Error in line 14: nB5zWVh S825 97,3
Error in line 10: J2JiL S825 78,2
Error in line 32: S825 S937 90,2
